force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/BMCServiceDesk__BMC_ResourcePool__c.object-meta.xml
<CustomObject>
    <description>BMC_ResourcePool. Class that serves as a logical entity (with associated controls) provided by the host system to allocate and assign resources. A given ResourcePool may be used to allocate resources of a specific type. Hierarchies of ResourcePools may be created to provide administrative control over allocations. In cases where resources are subdivided, multiple resource pools may exist (for example, nodal boundaries in NUMA-like systems). In systems that support over-commitment, pools represent the reservable capacity, not an upper bound or limit on the maximum amount that can be allocated. Admission control during power-on may detect and prevent systems from powering due to resource exhaustion. For example, over-commitment on a ResourcePool with ResourceType=Memory would require that sufficient space be available in a backing store that might be managed through a storage ResourcePool.</description>
    <label>Resource Pool</label>
    <nameField>
        <label>Resource Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>