force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/fields/BMCServiceDesk__Allocation_Units__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Allocation_Units__c</fullName>
    <label>Allocation Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>