force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/fields/BMCServiceDesk__Currently_Consumed_Resource__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Currently_Consumed_Resource__c</fullName>
    <label>Currently Consumed Resource</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>