force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/fields/BMCServiceDesk__High_Water_Mark__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__High_Water_Mark__c</fullName>
    <label>High Water Mark</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>