force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/fields/BMCServiceDesk__Other_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Other_Resource_Type__c</fullName>
    <label>Other Resource Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>