force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/fields/BMCServiceDesk__Pool_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Pool_ID__c</fullName>
    <label>Pool ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>