force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/fields/BMCServiceDesk__Primordial__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Primordial__c</fullName>
    <label>Primordial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>