force-app/main/default/objects/BMCServiceDesk__BMC_ResourcePool__c/fields/BMCServiceDesk__Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer System</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Memory</fullName>
            </value>
            <value>
                <fullName>IDE Controller</fullName>
            </value>
            <value>
                <fullName>Parallel SCSI HBA</fullName>
            </value>
            <value>
                <fullName>FC HBA</fullName>
            </value>
            <value>
                <fullName>iSCSI HBA</fullName>
            </value>
            <value>
                <fullName>IB HCA</fullName>
            </value>
            <value>
                <fullName>Ethernet Adapter</fullName>
            </value>
            <value>
                <fullName>Other Network Adapter</fullName>
            </value>
            <value>
                <fullName>I/O Slot</fullName>
            </value>
            <value>
                <fullName>I/O Device</fullName>
            </value>
            <value>
                <fullName>Floppy Drive</fullName>
            </value>
            <value>
                <fullName>CD Drive</fullName>
            </value>
            <value>
                <fullName>DVD Drive</fullName>
            </value>
            <value>
                <fullName>Disk Drive</fullName>
            </value>
            <value>
                <fullName>Tape Drive</fullName>
            </value>
            <value>
                <fullName>Storage Extent</fullName>
            </value>
            <value>
                <fullName>Other Storage Device</fullName>
            </value>
            <value>
                <fullName>Serial Port</fullName>
            </value>
            <value>
                <fullName>Parallel Port</fullName>
            </value>
            <value>
                <fullName>USB Controller</fullName>
            </value>
            <value>
                <fullName>Graphics Controller</fullName>
            </value>
            <value>
                <fullName>IEEE 1394 Controller</fullName>
            </value>
            <value>
                <fullName>Partitionable Unit</fullName>
            </value>
            <value>
                <fullName>Base Partitionable Unit</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Cooling Capacity</fullName>
            </value>
            <value>
                <fullName>Ethernet Switch Port</fullName>
            </value>
            <value>
                <fullName>Logical Disk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>